<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- 动画结束后的颜色修改视图 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/result_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorSuccess"
            android:visibility="invisible" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_main_gradient">

            <!--    顶部胶囊徽章    -->
            <TextView
                android:id="@+id/tv_badge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_badge_pill"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                android:text="@string/main_badge"
                android:textColor="#CCFFFFFF"
                android:textSize="11sp"
                android:textStyle="bold"
                android:letterSpacing="0.3"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--    主标题    -->
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:paddingTop="8dp"
                android:paddingBottom="10dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold"
                android:letterSpacing="0.08"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_badge"
                app:layout_constraintVertical_bias="0.0" />
            <!--    标题下方的简介  -->
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="30dp"
                android:text="@string/app_description"
                android:textColor="#B3FFFFFF"
                android:textSize="18sp"
                android:letterSpacing="0.05"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.0" />

            <!--   按钮光晕（垫在电源按钮后面）   -->
            <View
                android:id="@+id/glow_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/bg_power_glow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <!--   图片开始按钮在简介下面   -->
            <ImageButton
                android:id="@+id/start_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="bottom|center_horizontal"
                android:background="@drawable/power_supply"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="0.5" />

            <!--   按钮下方提示   -->
            <TextView
                android:id="@+id/tv_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/main_hint"
                android:textColor="#80FFFFFF"
                android:textSize="13sp"
                android:letterSpacing="0.1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/start_button" />

            <!--   底部状态胶囊   -->
            <TextView
                android:id="@+id/tv_status_pill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@drawable/bg_status_pill"
                android:backgroundTint="@color/pill_main_bg_off"
                android:paddingHorizontal="14dp"
                android:paddingVertical="4dp"
                android:text="@string/main_status_off"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
    <com.chihiro.scrolllayout.ScrollLayout
        android:id="@+id/scroll_down_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000">

        <!--
            使用 ContentScrollView 替代 ContentListView，
            onAttachedToWindow 时自动关联 ScrollLayout，
            内部嵌入静态设置面板 layout_settings_panel。
        -->
        <com.chihiro.scrolllayout.content.ContentScrollView
            android:id="@+id/settings_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_background"
            android:fillViewport="true"
            android:overScrollMode="never">

            <include
                android:id="@+id/settings_panel"
                layout="@layout/layout_settings_panel" />

        </com.chihiro.scrolllayout.content.ContentScrollView>
    </com.chihiro.scrolllayout.ScrollLayout>

</RelativeLayout>
